--- a/static/index.css
+++ b/static/index.css
@@ -11,6 +11,10 @@ section {
   width: auto;
 }
 
+.cursive {
+  font-style: italic;
+}
+
 .main-container {
   display: flex;
   flex-direction: row;
